--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,16 @@
 {% load static tailwind_tags %}
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     {% tailwind_css %}
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 </head>
 <body>
+    {% block messagues %} {% include "messages.html" %}{% endblock messagues %}
+    {% block content %}{% endblock content %}
     
 </body>
 </html>
